# llm-evaluation

./: .gitignore  CONTRIBUTING.md  README.md  mlflow_eval.py  mlflow_ui.py  pyproject.toml
.github/workflows/: tests.yml
configs/: full-nightly.yaml  quick-smoke.yaml
src/: eval_dataset.py  mlflow_eval.py  mlflow_ui.py
src/datasets/: __init__.py  basic_questions.py  coding.py  design.py  finance.py  instruction_following.py  reasoning.py  tool_usage.py
tests/: test_eval_config.py  test_scorers.py
