[project]
name = "llm-evaluation"
version = "0.1.0"
description = "Local LLM evaluation harness for Ollama models, scored with rule-based checkers and tracked in MLflow"
requires-python = ">=3.12"
dependencies = [
    "mlflow>=2.18",
    "pyyaml>=6.0",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.21",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
